public/responsive/small/portrait.css
.home .logo {
  background-position: 58% 0;
}

.branding .pitch {
  font-size: 33.5px;
  margin-top: 32px;
  padding-left: 5%;
}

.home .branding .mobiles {
  height: 170px;
  margin-top: 10px;
  margin-left: 4.5%;
}

.home .brand-solid-texture {
  height: 280px;
  top: 140px;
}

.branding {
  height: 406px;
}

.about article.last {
    margin: 0 0 25px 0;
}

.about .first{
  margin-top: 20px;
  margin-bottom: 17px;
}

section .strategy .tile {
  margin: 21px 0 0;
  width: 87%;
}

section .strategy .tile[position="center"] {
  margin-top: 4px;
  margin-bottom: 0;
}

.strategy .tile[position="right"] {
 margin-bottom: 5px; 
 margin-top: 14px;
}

.tile .leader {
  float: left;
  margin-right: 3%;
  width: auto;
}

.community p {
  padding-top: 0;
  font-size: 18px;
}

.community .tile {
  margin-top: 19px;
  padding: 0;
  width: 85%;
}

.community .tile[position="right"] {
  margin-top: 10px;
}

.community .tile[position="left"] {
  padding: 0;
  margin-top:22px;
}

footer {
  margin-top: 53px;
}

@media screen and (max-width: 450px){
  .branding .pitch{
    font-size: 35px;
    line-height: 1;
    padding: 0 12% 0 10%;
    margin-top: 26px;
  }
  
  .home .brand-solid-texture {
    height: 280px;
  }  
  
  .community .tile {
    width: 90%;
  }
  
  .community .tile[position="right"] {
    margin-top: 55px;
    margin-bottom: 20px;
  }
  
  .about article.last {
    margin-bottom: 25px;
  }
  
  .about article.first{
   margin-top: 30px;
  }
  
  .about .tile {
    width: 80%;
  }  
}

@media screen and (max-width: 320px) {
  
  .home .logo{
    background-position: 47% 0;
    background-size: 97%;
  }

  nav.cloud {
      letter-spacing: 1.5px;
      margin: auto;
      padding-right: 0;
      position: inherit;
      width: 201px;
  }

  .home .branding .mobiles {
    background-image: url("/images/branding/mobiles-480.png");
    background-size: 104%;
    height: 143px;
    margin: 10px 2% 0 4.5%;
  }
  
  .branding .pitch{
    font-size: 35px;
    line-height: 1;
    padding: 0 12% 0 10%;
    margin-top: 26px;
  }

  body .main{
    padding-left: 6%;
  }

  .home .brand-solid-texture {
    height: 255px;
    top: 140px;
  }
  
  .about article.last {
    margin: 9px 0 25px;
  }
  
  .about article.tile{
    width: 92%;
  }
  
  .about article.first{
    width: 97%;
    margin-top: 0;
  }
  
  .community .tile[position="right"] {
    margin-top: 125px;
  }
  
  section.strategy .tile{
    width: 92%;
  }
  
  section.strategy article.tile[position="center"]{
    margin-top: 12px;
  }
  
  .tile .leader {
    float: none;
  }

  footer {
    margin-top: 100px;
  }
  
  footer section.bottom {
    height: 270px;
  }  
}

